# python-calculator

./: setup.cfg
pythoncalculator/: __init__.py  multiply.py
tests/: test_multiply.py
